3. Уникальность элементов и сортировка.[#169527]